# operator-core

./: .gitignore  README.md  dev.template.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: publish.yaml
manifests/: crds.yaml  example-resources.yaml
operator_core/: __init__.py
scripts/: dev.sh  helpers.py  publish.sh
