[project]
name = "bfiola-operator-core"
version = "0.0.0"
dependencies = [
    "fastapi",
    "kopf",
    "lightkube",
    "lightkube-models",
    "pydantic",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
include = ["operator_core"]
